workspace(name = "albatross")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
    
http_archive(
    name = "rules_swiftnav",
    sha256 = "807ad0cd61f8c0d7b98499a25c6bab7fee9bf17bc977e5e142cd6fccc463eb9d",
    strip_prefix = "rules_swiftnav-rules_swiftnav-58f1d96472b43afe7995f9a17873365e15989f78",
    url = "https://github.com/swift-nav/rules_swiftnav/archive/rules_swiftnav-58f1d96472b43afe7995f9a17873365e15989f78.tar.gz",
)

load("@rules_swiftnav//cc:repositories.bzl", "register_swift_cc_toolchains", "swift_cc_toolchain")

swift_cc_toolchain()

register_swift_cc_toolchains()

# Rules for integrating with cmake builds
http_archive(
    name = "rules_foreign_cc",
    strip_prefix = "rules_foreign_cc-c65e8cfbaa002bcd1ce9c26e9fec63b0b866c94b",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/c65e8cfbaa002bcd1ce9c26e9fec63b0b866c94b.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

http_archive(
    name = "mkl_headers",
    build_file = "@rules_swiftnav//third_party:mkl_headers.BUILD",
    sha256 = "b24d12a8e18ba23de5c659a33fb184a7ac6019d4b159e78f628d7c8de225f77a",
    urls = [
        "https://anaconda.org/intel/mkl-include/2023.1.0/download/linux-64/mkl-include-2023.1.0-intel_46342.tar.bz2",
    ],
)

http_archive(
    name = "mkl",
    build_file = "@rules_swiftnav//third_party:mkl.BUILD",
    sha256 = "c63adbfdbdc7c4992384a2d89cd62211e4a9f8061e3e841af1a269699531cb02",
    strip_prefix = "lib",
    urls = [
        "https://anaconda.org/intel/mkl-static/2023.1.0/download/linux-64/mkl-static-2023.1.0-intel_46342.tar.bz2",
    ],
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
http_archive(
    name = "hedron_compile_commands",
    sha256 = "4b251a482a85de6c5cb0dc34c5671e73190b9ff348e9979fa2c033d81de0f928",
    strip_prefix = "bazel-compile-commands-extractor-5bb5ff2f32d542a986033102af771aa4206387b9",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/5bb5ff2f32d542a986033102af771aa4206387b9.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

http_archive(
    name = "zlib",
    build_file = "@rules_swiftnav//third_party:zlib.BUILD",
    sha256 = "b3a24de97a8fdbc835b9833169501030b8977031bcb54b3b3ac13740f846ab30",
    strip_prefix = "zlib-1.2.13",
    urls = [
        "https://zlib.net/zlib-1.2.13.tar.gz",
        "https://www.zlib.net/fossils/zlib-1.2.13.tar.gz",
    ],
)

http_archive(
    name = "zstd",
    sha256 = "9c4396cc829cfae319a6e2615202e82aad41372073482fce286fac78646d3ee4",
    strip_prefix = "zstd-1.5.5",
    url = "https://github.com/facebook/zstd/releases/download/v1.5.5/zstd-1.5.5.tar.gz",
    build_file = "@rules_swiftnav//third_party:zstd.BUILD",
)

http_archive(
    name = "suitesparse",
    build_file = "@rules_swiftnav//third_party:suitesparse.BUILD",
    sha256 = "dccfb5f75aa83fe2edb4eb2462fc984a086c82bad8433f63c31048d84b565d74",
    strip_prefix = "SuiteSparse-7.5.1",
    urls = [
        "https://github.com/DrTimothyAldenDavis/SuiteSparse/archive/refs/tags/v7.5.1.tar.gz",
    ],
)

local_repository(
    name = "gflags",
    path = "third_party/googleflags",
)

local_repository(
    name = "gtest",
    path = "third_party/googletest",
)

new_local_repository(
    name = "eigen",
    build_file = "@rules_swiftnav//third_party:eigen.BUILD",
    path = "third_party/eigen",
)

new_local_repository(
    name = "gzip",
    build_file = "@rules_swiftnav//third_party:gzip.BUILD",
    path = "third_party/gzip-hpp",
)

new_local_repository(
    name = "variant",
    build_file = "@rules_swiftnav//third_party:variant.BUILD",
    path = "third_party/variant",
)

new_local_repository(
    name = "cereal",
    build_file = "@rules_swiftnav//third_party:cereal.BUILD",
    path = "third_party/cereal",
)

new_local_repository(
    name = "fast_csv",
    build_file = "@rules_swiftnav//third_party:fast_csv.BUILD",
    path = "third_party/fast-cpp-csv-parser",
)

new_local_repository(
    name = "nlopt",
    build_file = "@rules_swiftnav//third_party:nlopt.BUILD",
    path = "third_party/nlopt",
)

new_local_repository(
    name = "ThreadPool",
    build_file = "@rules_swiftnav//third_party:ThreadPool.BUILD",
    path = "third_party/ThreadPool",
)
